<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient_background"
    android:orientation="vertical">

    <TextView
        style="@style/myAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingStart="50dp"
        android:text="@string/welcome"
        android:textSize="30dp"/>

    <TextView
        style="@style/myAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:text="@string/student"
        android:textSize="50dp"/>

    <TextView
        style="@style/myAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:text="@string/let_s_start_learning"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edituserName"
            style="@style/content_font"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_corners_bg"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            android:shadowRadius="20" />

        <EditText
            android:id="@+id/editpassword"
            style="@style/content_font"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingStart="10dp"
            android:background="@drawable/round_corners_bg"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="text"
            android:selectAllOnFocus="true" />

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/buttonLogin"
        style="@style/MyButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/button_login"
       />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/myAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/transparent"
        android:layout_gravity="center"
        android:text="@string/need_an_account"
        android:textSize="18sp"/>

</LinearLayout>