<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="30dp"
        android:text="Hello,"
        android:textSize="28sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:text="username"
        android:textSize="28sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/circle_text"
        android:gravity="center"
        android:text="@string/you_have_one_task_due" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_backgraound2"
        android:orientation="vertical">

        <ImageView
            android:layout_margin="5dp"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/image"
            android:src="@drawable/star" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/generated_task1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/testtaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="Description"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/buttonContinue"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/arrow" />


    </LinearLayout>



</LinearLayout>